@@ -1,0 +1,25 @@
+.TH OMX_INFO 1 "MARCH 2009"
+
+.SH NAME
+omx_info \- display information about Open-MX interfaces
+
+.SH SYNOPSIS
+.B omx_info [ options ]
+
+.SH DESCRIPTION
+.B omx_info
+displays information about the currently running
+Open-MX driver.
+It lists all interfaces that are attached, and the
+addresses and hostnames of all known remote peers.
+
+.SH OPTIONS
+.TP
+.B -h
+Display a brief help message.
+
+.SH SEE ALSO
+omx_endpoint_info(1), omx_counters(1), omx_hostname(1), omx_init_peers(1)
+
+.SH AUTHOR
+Brice Goglin
